--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/converter-gson-2.1.0.jar')
     compile files('libs/eyekey-sdk_2.2.jar')
@@ -43,4 +43,5 @@ dependencies {
     compile files('libs/okio-1.9.0.jar')
     compile files('libs/retrofit-2.1.0.jar')
     compile files('libs/FaceppSDK.jar')
+    compile "com.android.support:palette-v7:26.1.0"
 }
