--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '28.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.example.swface"
+        applicationId "com.example.demo"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,18 +30,26 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    testCompile 'junit:junit:4.12'
-    compile files('libs/converter-gson-2.1.0.jar')
-    compile files('libs/eyekey-sdk_2.2.jar')
-    compile files('libs/gson-2.7.jar')
-    compile files('libs/okhttp-3.4.1.jar')
-    compile files('libs/okio-1.9.0.jar')
-    compile files('libs/retrofit-2.1.0.jar')
-    compile files('libs/FaceppSDK.jar')
-    compile "com.android.support:palette-v7:26.1.0"
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    testImplementation 'junit:junit:4.12'
+    implementation files('libs/converter-gson-2.1.0.jar')
+    implementation files('libs/eyekey-sdk_2.2.jar')
+    implementation files('libs/gson-2.7.jar')
+    implementation files('libs/okhttp-3.4.1.jar')
+    implementation files('libs/okio-1.9.0.jar')
+    implementation files('libs/retrofit-2.1.0.jar')
+    implementation files('libs/FaceppSDK.jar')
+    implementation 'com.android.support:palette-v7:27.1.1'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.zhihu.android:matisse:0.5.1'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
 }
