--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,17 +26,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="Android:icon, android:theme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VideoRecognise" />
-        <activity android:name=".ProcessActivity" />
-        <activity android:name=".SettingActivity" />
-        <activity android:name=".AddActivity"></activity>
+        <activity android:name=".activity.VideoRecognise" />
+        <activity android:name=".activity.ProcessActivity" />
+        <activity android:name=".activity.SettingActivity" />
+        <activity android:name=".activity.AddActivity"></activity>
     </application>
 
 </manifest>
